--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "gh-pages": "^6.0.0",
     "tailwindcss": "^3.3.3"
   },
   "name": "tailwind_udemy",
@@ -79,8 +80,10 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
+    "build": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
+    "deploy": "gh-pages -d dist"
   },
+  "homepage": "https://kagami-tsukimura.github.io/kagami.com/",
   "keywords": [],
   "author": "",
   "license": "ISC",
